objects/Deployment_Log__c.object
<CustomObject   >
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Deployment Logs</relationshipLabel>
        <relationshipName>Deployment_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deployed Patch Lookup</description>
        <label>Patch</label>
        <referenceTo>Patch__c</referenceTo>
        <relationshipLabel>Deployment Logs</relationshipLabel>
        <relationshipName>Deployment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snaphot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snaphot</label>
        <referenceTo>Snapshot__c</referenceTo>
        <relationshipLabel>Deployment Logs</relationshipLabel>
        <relationshipName>Deployment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>